memperbaiki validasi login

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -158,6 +158,19 @@ img {
     overflow: hidden;
 }
 
+.error_form {
+    display: none;
+    position: fixed;
+    width: 25%;
+    padding: 8px;
+    top: 15%;
+    left: 38%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    font-size: 14px;
+    text-align: center;
+}
+
 
 /* Fading animation */
 
