--- a/css/top_menu.css
+++ b/css/top_menu.css
@@ -71,7 +71,7 @@ body {
     display: none;
     position: absolute;
     background-color: #313F49;
-    min-width: 160px;
+    min-width: 120px;
     box-shadow: rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
@@ -100,11 +100,11 @@ body {
 .dropdown {
     float: right;
     overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
+}
+
+.dropdown .dropbtn {
     cursor: pointer;
-    font-size: 16px;  
+    font-size: 16px;
     border: none;
     outline: none;
     color: white;
@@ -112,18 +112,18 @@ body {
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-  }
-  
-  .droppf-content {
+}
+
+.droppf-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 190px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 165px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  .droppf-content a {
+}
+
+.droppf-content a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -131,21 +131,29 @@ body {
     display: block;
     text-align: left;
     font-size: 16px;
-  }
-  
-  .droppf-content a:hover {
+}
+
+.droppf-content a:hover {
     background-color: #ddd;
-  }
-  
-  .show {
+}
+
+.show {
     display: block;
-  }
+}
 
 .button {
     border: none;
     color: white;
     padding: 14px 28px;
-    /* font-size: 16px; */
+    font-size: 1vw;
+    cursor: pointer;
+    font-family: 'Century Gothic';
+    border-radius: 6px;
+}
+
+.buttont {
+    border: none;
+    color: white;
     font-size: 1vw;
     cursor: pointer;
     font-family: 'Century Gothic';
