--- a/css/main_style.css
+++ b/css/main_style.css
@@ -35,6 +35,10 @@ img {
     font-weight: bold;
 }
 
+#tbl th {
+    font-family: 'Century Gothic';
+}
+
 #kanan1 a {
     color: white;
 }
@@ -56,6 +60,18 @@ img {
 
 #kr {
     padding-left: 15px;
+}
+
+
+/* login  */
+
+#login {
+    width: 50%;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 6px;
 }
 
 
