--- a/css/main_style.css
+++ b/css/main_style.css
@@ -62,6 +62,25 @@ img {
     padding-left: 15px;
 }
 
+#mdl {
+    color: black;
+}
+
+
+/* foto profil */
+
+#profil {
+    border-radius: 100px;
+    width: 20%;
+}
+
+#image-preview {
+    border-radius: 100px;
+    width: 150px;
+    height: 150px;
+    border: 4px solid #6699FF;
+}
+
 
 /* login  */
 
